--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
       "browser": true,
       "es6": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["plugin:prettier/recommended", "eslint:recommended"],
   "parserOptions": {
       "sourceType": "module",
       "ecmaVersion": 8,
@@ -12,11 +12,13 @@
           "jsx": true
       }
   },
+  "plugins": ["prettier"],
   "rules": {
-      "indent": ["error", 4],
+      "indent": ["error", 2],
       "linebreak-style": ["error", "unix"],
+      "no-console": 0,
+      "prettier/prettier": "error",
       "quotes": ["error", "double"],
-      "semi": ["error", "always"],
-      "no-console": 0
+      "semi": ["error", "always"]
   }
 }
