--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "1.15.3",
     "prettier-eslint": "^8.8.2"
   }
 }
